force-app/main/default/objects/dlrs__LookupRollupSummaryScheduleItems__c/dlrs__LookupRollupSummaryScheduleItems__c.object-meta.xml
<CustomObject>
    <label>Lookup Rollup Summary Schedule Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lookup Rollup Summary Schedule Item Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summary Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>