force-app/main/default/objects/dlrs__LookupRollupSummaryScheduleItems__c/fields/dlrs__LookupRollupSummary2__c.field-meta.xml
<CustomField>
    <fullName>dlrs__LookupRollupSummary2__c</fullName>
    <description>Either the Id (Custom Object) or Name (Custom Metadata) of the rollup summary definition that generated this schedule item.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Rollup Summary 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>